<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginTop="5dp"
                android:text="@string/sample_description"
                android:minLines = "1"
                android:maxLines = "10"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:maxLines="10"
                android:minLines="1"
                android:text="@string/sample_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <ImageButton
                android:id="@+id/menuImageButton"
                android:layout_width="51dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_more_vert_black_24dp"></ImageButton>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>